--- a/main.html
+++ b/main.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<table border="1">
+    <thead border="">
+		<tr>
+			<th> Roll number</th>
+			<th>Name</th>
+		</tr>
+	</thead>
+		<tbody>
+			<tr>
+				<td> 101 </td>
+				<td>Rohit Dahale</td>
+			</tr>
+			<tr>
+				<td> 102 </td>
+				<td> Pooja Rathod</td>
+			</tr>
+			<tr>
+				<td>103</td>
+				<td>Saurabh Nahar</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
-
 </html>
